team-admin: Fix select overflow and format

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,6 +92,8 @@
   margin-top: 0.25rem;
   max-height: 50vh;
   min-width: 100%;
+  max-width: 100%;
+  overflow-wrap: break-word;
   overflow-y: auto;
   padding: 0.5rem;
   position: absolute;
@@ -121,6 +123,11 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   user-select: none;
+  overflow-wrap: break-word;
+  font-size: 0.875em;
+  max-width: 100%;
+  white-space: initial;
+  word-wrap: break-word;
 }
 .solid-select-option[data-disabled="true"] {
   pointer-events: none;
@@ -133,4 +140,10 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   user-select: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .solid-select-option {
+    font-size: 1em;
+  }
 }
